added some portfolio and fixed some links

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <div class="portfolio-caption">
                         <h4>Toyota.com Clone</h4>
                         <p class="text-muted">Build and Price Shop Experience</p>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">GITHUB</a>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/Toyota.com-Clone" role="button">GITHUB</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
                         <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Charmi</h4>
-                        <p class="text-muted">Mobile Dating App</p>
+                        <p class="text-muted">Mobile (web) Dating App</p>
                         <a class="btn btn-primary btn-sm" href="https://github.com/Team-Overkill/Charmi-React" target="_blank" role="button">GITHUB</a>
                         <a class="btn btn-primary btn-sm" href="https://youtu.be/ZnkR-ij2TzU" target="_blank" role="button">VIDEO TOUR</a>
                     </div>
@@ -140,16 +140,77 @@
                         <img class="portfolio-img" src="public/img/nasa.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Fun with NASA API</h4>
-                        <p class="text-muted">Exploring Space Travel</p>
+                        <h4>Exploring "Space Travel"</h4>
+                        <p class="text-muted">Some Fun with the NASA API</p>
                         <a class="btn btn-primary btn-sm" href="#" role="button">GITHUB</a>
                         <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a>
                         <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="portfolio-img" src="public/img/rgb3.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>RGB Color Picker Game </h4>
+                        <p class="text-muted">Master your RGB Skills with this JS based Game</p>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/ColorPickerUdemy" target="_blank" role="button">GITHUB</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
+                        <a class="btn btn-primary btn-sm" href="https://murffious.github.io/ColorPickerUdemy/" target="_blank" role="button">SITE</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="portfolio-img" src="public/img/charmiscreen.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Charmi2 ReactNative </h4>
+                        <p class="text-muted">Native Dating App for IOS/Anrdroid with Touch</p>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/Charmi" target="_blank" role="button">GITHUB</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
+                        <a class="btn btn-primary btn-sm" href="#" target="_blank" role="button">SITE</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item"  >
+                    <a href="#portfolioModal5" class="portfolio-link" >
+                        <div class="card text-center" style="border: 1px solid white">
+                            <div class="card-header">
+                                In Development w/ReactJS
+                            </div>
+                            <div class="card-block">
+                                <h4 class="card-title">Coming very soon!</h4>
+                                <p class="card-text"> </p>
+                                
+                            </div>
+                            <div class="card-footer text-muted">
+                                to be published AUG 2017
+                            </div>
+                        </div>
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Murff Gathering Site</h4>
+                        <p class="text-muted">An interactive gathering place for reunions et all</p>
+                        <a class="btn btn-primary btn-sm" href="#" target="_blank" role="button">GITHUB</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
+                        <a class="btn btn-primary btn-sm" href="#" target="_blank" role="button">SITE</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
 
 
     <!-- Skills Section -->
@@ -281,38 +342,39 @@
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <p class="large text-muted">I was born and raised in the great state of Utah. I have a diverse professional background including
                             teaching, sales, insurance and have rich volunteer experience. I have fallen in love with web
-                            development and have made it not just a passion, but a career. The continued emergence of new
-                            technologies, frameworks, and languages is exciting and makes this a fantastic time to be in
-                            this field. Please feel free to drop me a line with any questions, tips, or opportunities!</p>
+                            development and have made it not just a passion, but a career. To stay sharp on my CSS and other
+                            skills I clone sites. I love reverse engineering things or creating my own effects. I also strive
+                            for a very high level of excellence and innovation. Please feel free to drop me a line with any
+                            questions, tips, or opportunities!</p>
                     </div>
                 </div>
                 <div class="resume">
                     <p>Click <a href="professional_resume.pdf">this</a> link to check out my professional resume or follow one
                         of the below links:</p>
                 </div>
-                    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright"></span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="https://github.com/murffious" target="_blank"><i class="fa fa-github"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/paul.murff.7" target="_blank"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href=" https://www.linkedin.com/in/paul-murff/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <span class="copyright"></span>
-                </div>
-            </div>
-        </div>
-    </footer>
-               
+                <footer>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <span class="copyright"></span>
+                            </div>
+                            <div class="col-md-4">
+                                <ul class="list-inline social-buttons">
+                                    <li><a href="https://github.com/murffious" target="_blank"><i class="fa fa-github"></i></a>
+                                    </li>
+                                    <li><a href="https://www.facebook.com/paul.murff.7" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    </li>
+                                    <li><a href=" https://www.linkedin.com/in/paul-murff/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="copyright"></span>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+
                 <!-- <div class="social" width="200px"> 
                     <a><i class="fa fa-linkedin-square"  style="font-size: 50px; margin-right: 30px" aria-hidden="true"></i></a>
                     <a><i class="fa fa-facebook-square" style="font-size: 50px" aria-hidden="true"></i></a>
@@ -326,7 +388,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Get In Touch</h2>
+                    <h2 class="section-heading">Get In Touch @ murff.paul@gmail.com OR below</h2>
                     <h3 class="section-subheading text-muted">Feel Free To Reach Out With Any Questions Or Opportunities!</h3>
                 </div>
             </div>
@@ -414,7 +476,10 @@
                                 <h2>Toyota.com Clone</h2>
                                 <p class="item-intro text-muted">A clone of the "build and price" experience on Toyota's offical site.</p>
                                 <img class="img-responsive img-centered" src="public/img/toyotatacomabuild.png" alt="">
-                                <p>I developed this site based off the purpose to get a customer to actually have an experience similar to going to a dealership and picking out a car to drive. The end goal is for a person to buy the car at a dealership by emailing their info and "build" to a dealer. </p>
+                                <p>I developed this site based off the purpose to get a customer to actually have an experience
+                                    similar to going to a dealership and picking out a car to drive. The end goal is for
+                                    a person to buy the car at a dealership by emailing their info and "build" to a dealer.
+                                    </p>
                                 <p>
                                     You can explore the site <a href="http://www.paulmurff.com">here</a>.</p>
                                 <ul class="list-inline">
@@ -447,7 +512,10 @@
                                 <h2>Charmi</h2>
                                 <p class="item-intro text-muted">A mobile-web based dating application modeled after apps like Tinder or Mutual.</p>
                                 <img class="img-responsive img-centered" src="public/img/Charmi1.png" alt="">
-                                <p>Charmi is desgined with mobile use in mind.  This partiucular styling was designed for an iPhone 6 Plus specifically in mind. Users can login with Auth0 (Gmail, Facebook etc.) and search profiles. Users can like or pass on profiles and then messages those they match with.</p>
+                                <p>Charmi is desgined with mobile use in mind. This partiucular styling was designed for an
+                                    iPhone 6 Plus specifically in mind. Users can login with Auth0 (Gmail, Facebook etc.)
+                                    and search profiles. Users can like or pass on profiles and then messages those they
+                                    match with.</p>
                                 <p>You can preview Charmi <a href="">here</a>.</p>
                                 <ul class="list-inline">
                                     <li>Date: June/July 2017</li>
@@ -481,12 +549,81 @@
                                 <p class="item-intro text-muted">A fun site using the NASA API</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/whirlwind2.png" alt="">
                                 <p></p>
-                                <p>You can checkout the application <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">here</a>.
+                                <p>You can checkout the application <a href="#">here</a>.
                                     Be sure to load the scripts due to googles tightened restrictions on data served over
-                                    http.</p>
+                                    http.
+                                </p>
                                 <ul class="list-inline">
                                     <li>Date: July 2016</li>
                                     <li>Category: AngularJS Web Application</li>
+                                </ul>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>RGB Color Picker Game</h2>
+                                <p class="item-intro text-muted">A fun game testing your ability to choose RGB colors based on their numbers.</p>
+                                <img class="img-responsive img-centered" src="public/img/rgb2.png" alt="">
+                                <p></p>
+                                <p>You can checkout the application <a href="https://murffious.github.io/ColorPickerUdemy/"
+                                        target="_blank">here</a>.
+                                </p>
+                                <ul class="list-inline">
+                                    <li>Date: May 2017</li>
+                                    <li>Category: Vanilla JS-DOM and CSS</li>
+                                </ul>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Charmi2 Native Android/IOS Dating App</h2>
+                                <p class="item-intro text-muted">Remake of Charmi web app for native</p>
+                                <img class="img-responsive img-centered" src="public/img/app.jpg" alt="">
+                                <p></p>
+                                <p>You can checkout the application soon on Expo<a href="#"
+                                        target="_blank">here</a>.
+                                </p>
+                                <ul class="list-inline">
+                                    <li>Date: July/Aug 2017</li>
+                                    <li>Category: React Native, React, Redux, SQL, Node, sockets.io and more to come.</li>
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
