--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     <div class="portfolio-caption">
                         <h4>Exploring "Space Travel"</h4>
                         <p class="text-muted">Some Fun with the NASA API</p>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">GITHUB</a>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a>
-                        <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/Nasa-API-Fun" role="button">GITHUB</a>
+                        <a class="btn btn-primary btn-sm" href="https://nasaapi.surge.sh" role="button">SITE</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a> -->
                     </div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Get In Touch @ murff.paul@gmail.com OR below</h2>
+                    <h2 class="section-heading">Get In Touch</h2>
                     <h3 class="section-subheading text-muted">Feel Free To Reach Out With Any Questions Or Opportunities!</h3>
                 </div>
             </div>
@@ -547,7 +547,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Space Travel Explorer</h2>
                                 <p class="item-intro text-muted">A fun site using the NASA API</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/whirlwind2.png" alt="">
+                                <img class="img-responsive img-centered" src="img/portfolio/nasa2.png" alt="">
                                 <p></p>
                                 <p>You can checkout the application <a href="#">here</a>.
                                     Be sure to load the scripts due to googles tightened restrictions on data served over
