--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                                 <p class="item-intro text-muted">Remake of Charmi web app for native</p>
                                 <img class="img-responsive img-centered" src="public/img/app.jpg" alt="">
                                 <p></p>
-                                <p>You can checkout the application soon on Expo<a href="#"
+                                <p>This app is still in development. You can checkout the application soon on Expo<a href="#"
                                         target="_blank">here</a>.
                                 </p>
                                 <ul class="list-inline">
