iTunes and Youtube add but not done

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
         </div>
     </section>
-
+   
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
@@ -320,12 +320,49 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="portfolio-img" src="public/img/youtubeclone.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>YouTube Video Search</h4>
+                        <p class="text-muted">Simple Search and Watch Videos from YouTube API</p>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/react-video-site" role="button">GITHUB</a>
+                        <a class="btn btn-primary btn-sm" href=" http://youtubeapi.surge.sh/" role="button">SITE</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a> -->
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="portfolio-img" src="public/img/RNAppleItunes.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>iTunes Music Clone</h4>
+                        <p class="text-muted">React Native- Semi Functional Still in Production</p>
+                        <a class="btn btn-primary btn-sm" href="https://github.com/murffious/AppleMusicAppClone" role="button">GITHUB</a>
+                        <!-- <a class="btn btn-primary btn-sm" href="" role="button">SITE</a> -->
+                        <!-- <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a> -->
+                    </div>
+                </div>
+            </div>
              <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills Display</h2>
                     <h3 class="section-subheading text-muted">Varioius Code Snippets and Interaction</h3>
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     
