fixed calendar picture

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="portfolio-img" src="public/img/Calendar.png" class="img-responsive" alt="">
+                        <img class="portfolio-img" src="public/img/calendar.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>AngularJS Simple Calendar</h4>
