fixed link on angular calendar

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         <p class="text-muted">Basic Display of Many Angular Features</p>
                         <!-- <a class="btn btn-primary btn-sm" href="https://gist.github.com/anonymous/a2c2e3acfecacc01615179a15e45b0bb" target="_blank" role="button">GIST/GIT</a> -->
                         <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
-                        <a class="btn btn-primary btn-sm" href="https://codepen.io/Murffious/pen/KvgObP" target="_blank" role="button">SITE</a>
+                        <a class="btn btn-primary btn-sm" href="https://codepen.io/Murffious/pen/zdaxde" target="_blank" role="button">SITE</a>
                     </div>
                 
                 </div>
