--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <p class="text-muted">Build and Price Shop Experience</p>
                         <a class="btn btn-primary btn-sm" href="https://github.com/murffious/Toyota.com-Clone" role="button">GITHUB</a>
                         <!-- <a class="btn btn-primary btn-sm" href="#" role="button">SITE</a> -->
-                        <a class="btn btn-primary btn-sm" href="#" role="button">VIDEO TOUR</a>
+                        <a class="btn btn-primary btn-sm" href="https://youtu.be/_B5Y4JsZUvM" role="button">VIDEO TOUR</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
